--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -5,6 +5,7 @@
     justify-content: center; 
     gap: 80px; 
     margin: 80px 170px; 
+    margin-top: 160px;
 }
 .portfolio-title { 
     position: relative; 
